# stockfighter-haskell

./: .travis.yml  README.md  stockfighter.cabal
app/: Main.hs
src/Network/Stockfighter/: Info.hs  Lib.hs  Trade.hs  Util.hs
test/: Main.hs  Spec.hs
