name:                stockfighter
version:             0.1.0
synopsis:            A simple library for working with Stockfighter.
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/stockfighter#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           (c) Christopher Wells 2016
category:            HTTP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Stockfighter.Trade
                     , Network.Stockfighter.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , process
                     , semigroups
                     , text
  default-language:    Haskell2010

executable stockfighter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stockfighter
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
  build-depends:       base
                     , stockfighter
                     , aeson
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExcaliburZero/stockfighter
